--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -53,7 +53,7 @@
       <div class="divide-y divide-gray-200">
         <% @order.order_items.each do |item| %>
           <div class="p-6 flex items-center space-x-4">
-            <% if item.product_variant&.image&.attached? %>
+            <% if item.product_variant&.product_photo&.attached? %>
               <%= image_tag vite_asset_path(item.product_variant.product_photo), class: "h-16 w-16 object-cover rounded-lg", alt: item.product_variant.display_name %>
             <% else %>
               <div class="h-16 w-16 bg-gray-200 rounded-lg flex items-center justify-center">
