Update free delivery banner

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,8 @@
 
   <body class="flex flex-col h-screen">
     <!-- Delivery Banner -->
-    <div class="bg-black text-pink-300 py-2 px-4 text-center text-sm font-medium" style="font-family: Monaco, monospace;">
-      🚚 Free delivery on all mainland UK orders over £100 excl. VAT 🚚
+    <div class="bg-black text-pink-300 py-2 px-4 text-center text-sm font-medium">
+      🚚 <span class="mx-2">Free delivery on all mainland UK orders over £100 excl. VAT</span> 🚚
     </div>
 
     <%= tag.div notice, class: "alert alert-info", data: { turbo_temporary: true } if notice %>
