feat: add FAQ link to footer with system test

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -10,6 +10,11 @@
     <%= link_to "Contact", contact_path, class: "link link-hover" %>
   </nav>
   <nav>
+    <h6 class="footer-title">Help & Support</h6>
+    <%= link_to "FAQs", faq_path, class: "link link-hover" %>
+    <%= link_to "Contact", contact_path, class: "link link-hover" %>
+  </nav>
+  <nav>
     <h6 class="footer-title">Legal</h6>
     <%= link_to "Terms of use", terms_path, class: "link link-hover" %>
     <%= link_to "Privacy policy", privacy_path, class: "link link-hover" %>
