style: simplify contact CTA with plain design
- Remove blue background and border from alert
- Use simple centered text layout
- Maintain links for email and phone

--- a/app/views/faqs/index.html.erb
+++ b/app/views/faqs/index.html.erb
@@ -94,12 +94,9 @@
     <% end %>
 
     <!-- Contact CTA -->
-    <div class="alert alert-info mt-8">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-current shrink-0 w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-      <div>
-        <div class="font-semibold">Still have questions?</div>
-        <div class="text-sm">Contact us at <a href="mailto:info@afida.com" class="link">info@afida.com</a> or call <a href="tel:02033027719" class="link">0203 302 7719</a></div>
-      </div>
+    <div class="mt-12 text-center">
+      <p class="text-lg font-semibold text-gray-900 mb-2">Still have questions?</p>
+      <p class="text-gray-600">Contact us at <a href="mailto:info@afida.com" class="link">info@afida.com</a> or call <a href="tel:02033027719" class="link">0203 302 7719</a></p>
     </div>
   </div>
 
