refactor: change FAQ route from /faq to /faqs
- Update route in config/routes.rb (get 'faqs')
- Update footer link to use faqs_path
- Update search form to use faqs_path
- Update all tests (controller and system) to use faqs_url/faqs_path
- All tests passing (13 unit tests, 35 assertions)

--- a/app/views/faqs/index.html.erb
+++ b/app/views/faqs/index.html.erb
@@ -9,7 +9,7 @@
 
   <!-- Search Bar -->
   <div class="mb-8">
-    <%= form_with url: faq_path, method: :get, class: "max-w-2xl mx-auto", data: { controller: "faq-search", turbo_frame: "faq-content" } do |f| %>
+    <%= form_with url: faqs_path, method: :get, class: "max-w-2xl mx-auto", data: { controller: "faq-search", turbo_frame: "faq-content" } do |f| %>
       <div class="relative">
         <%= f.search_field :q,
             value: @search_query,
