--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -11,7 +11,7 @@
   </nav>
   <nav>
     <h6 class="footer-title">Help & Support</h6>
-    <%= link_to "FAQs", faq_path, class: "link link-hover" %>
+    <%= link_to "FAQs", faqs_path, class: "link link-hover" %>
     <%= link_to "Contact", contact_path, class: "link link-hover" %>
   </nav>
   <nav>
