--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= csp_meta_tag %>
 
     <%= yield :head %>
+    <%= canonical_url %>
 
     <%= vite_client_tag if Rails.env.development? %>
     <%= vite_javascript_tag "application" %>
