feat: add organization structured data

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -51,4 +51,8 @@
       </a>
     </div>
   </nav>
+
+  <script type="application/ld+json">
+    <%= raw organization_structured_data %>
+  </script>
 </footer>
