feat: add social meta tags and structured data to category pages

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -10,6 +10,48 @@
 <%= @category.meta_description %>
 <% end %>
 
+<% content_for :head do %>
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="<%= @category.meta_title %> | Afida">
+  <meta property="og:description" content="<%= @category.meta_description %>">
+  <meta property="og:url" content="<%= category_url(@category) %>">
+  <meta property="og:site_name" content="Afida">
+  <% if @category.image.attached? %>
+    <meta property="og:image" content="<%= url_for(@category.image) %>">
+  <% end %>
+
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:title" content="<%= @category.meta_title %>">
+  <meta name="twitter:description" content="<%= @category.meta_description %>">
+
+  <script type="application/ld+json">
+    <%= raw({
+      "@context": "https://schema.org",
+      "@type": "CollectionPage",
+      "name": @category.name,
+      "description": @category.description,
+      "url": category_url(@category),
+      "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": root_url
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": @category.name,
+            "item": category_url(@category)
+          }
+        ]
+      }
+    }.to_json) %>
+  </script>
+<% end %>
+
 <h1 class="text-4xl py-4 mb-2 flex items-center gap-3">
   <% if category_icon_path(@category).present? %>
     <%= vite_image_tag category_icon_path(@category), class: 'w-10 h-10 object-contain', alt: "#{@category.name} icon" %>
