--- a/app/views/products/_standard_product.html.erb
+++ b/app/views/products/_standard_product.html.erb
@@ -9,11 +9,11 @@
 <% end %>
 
 <% content_for :title do %>
-<%= @product.name %> | <%= @product.category.name %> | Afida
+<%= @product.meta_title.presence || "#{@product.name} | #{@product.category.name} | Afida" %>
 <% end %>
 
 <% content_for :meta_description do %>
-<%= @product.description %>
+<%= @product.meta_description.presence || @product.description %>
 <% end %>
 
 <% content_for :head do %>
