--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="mt-24 bg-afida-green footer sm:footer-horizontal text-base-content p-10">
   <nav>
     <h6 class="footer-title">Services</h6>
-    <%= link_to "Branding", branding_path, class: "link link-hover" %>
+    <%= link_to "Branding", branded_products_path, class: "link link-hover" %>
     <%= link_to "Samples", samples_path, class: "link link-hover" %>
   </nav>
   <nav>
