Update policy pages

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -16,8 +16,8 @@
   </nav>
   <nav>
     <h6 class="footer-title">Legal</h6>
-    <%= link_to "Terms of use", terms_path, class: "link link-hover" %>
-    <%= link_to "Privacy policy", privacy_path, class: "link link-hover" %>
+    <%= link_to "Terms of Service", terms_conditions_path, class: "link link-hover" %>
+    <%= link_to "Privacy policy", privacy_policy_path, class: "link link-hover" %>
   </nav>
 </footer>
 
