refactor: change lids button text to 'Continue to next step'
Changed from 'Skip - No lids needed' to 'Continue to next step'
which is more appropriate whether the user added lids or not.

--- a/app/views/products/_branded_configurator.html.erb
+++ b/app/views/products/_branded_configurator.html.erb
@@ -177,7 +177,7 @@
               <button type="button"
                       class="btn btn-ghost mt-4"
                       data-action="click->branded-configurator#skipLids">
-                Skip - No lids needed
+                Continue to next step
               </button>
             </div>
           </div>
