--- a/app/views/cart_items/_cart_item.html.erb
+++ b/app/views/cart_items/_cart_item.html.erb
@@ -80,8 +80,12 @@
         <%
           variant = cart_item.product_variant
           pac_size = variant.pac_size || 1
-          # Generate multiples of pack size (1x to 10x packs)
-          quantity_options = (1..10).map { |i| pac_size * i }
+          # Generate multiples of pack size (1x to 10x packs), max 10,000 units
+          max_quantity = [10 * pac_size, 10000].min
+          quantity_options = (1..10).map { |i| pac_size * i }.select { |q| q <= max_quantity }
+          # Always include current quantity if it's not already in the list
+          quantity_options << cart_item.quantity unless quantity_options.include?(cart_item.quantity)
+          quantity_options.sort!
         %>
 
         <%= form_with(model: cart_item, url: cart_cart_item_path(cart_item), method: :patch, local: false) do |form| %>
