--- a/app/views/cart_items/_cart_item.html.erb
+++ b/app/views/cart_items/_cart_item.html.erb
@@ -80,9 +80,21 @@
         <%
           variant = cart_item.product_variant
           pac_size = variant.pac_size || 1
-          # Generate multiples of pack size (1x to 10x packs), max 30,000 units
-          max_quantity = [10 * pac_size, 30000].min
-          quantity_options = (1..10).map { |i| pac_size * i }.select { |q| q <= max_quantity }
+          max_quantity = 30000
+
+          # Generate pack multiples up to 10,000 units
+          quantity_options = []
+          (1..10).each do |i|
+            quantity = pac_size * i
+            break if quantity > 10000
+            quantity_options << quantity
+          end
+
+          # Add 5,000-unit increments from 15,000 to 30,000
+          (15000..max_quantity).step(5000).each do |quantity|
+            quantity_options << quantity
+          end
+
           # Always include current quantity if it's not already in the list
           quantity_options << cart_item.quantity unless quantity_options.include?(cart_item.quantity)
           quantity_options.sort!
